tests/paczka1/small_fuzzy/50960322.err
Error in line 5: C6r5f16F S597 7,1
Error in line 9: C6r5f16F A788 7,2
